--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,5 +4,5 @@ sonar.projectKey=pipe
 sonar.projectVersion=1.0
 sonar.sources=.
 sonar.language=java
-sonar.login=admin
-sonar.password=admin
+#sonar.login=admin
+#sonar.password=admin
