--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>happy</groupId>
-	<artifactId>simple-web-app</artifactId>
+	<groupId>whatsapp</groupId>
+	<artifactId>practise</artifactId>
 	<packaging>war</packaging>
-	<version>1.9.0-RELEASE</version>
+	<version>1.0.0-RELEASE</version>
 	<properties>
 		<java-version>1.8</java-version>
 		<mitreid-connect-version>1.3.1</mitreid-connect-version>
