--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.host.url=http://15.206.68.119:9000/
-sonar.projectName=pipeline
+sonar.host.url=http://34.204.180.11:9000/
+sonar.projectName=test
 sonar.projectKey=pipe
 sonar.projectVersion=1.0
 sonar.sources=.
