--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 	<groupId>whatsapp</groupId>
 	<artifactId>practise</artifactId>
 	<packaging>war</packaging>
-	<version>1.0.0-RELEASE</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<properties>
 		<java-version>1.8</java-version>
 		<mitreid-connect-version>1.3.1</mitreid-connect-version>
