--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.host.url=http://3.94.202.180:9000/
-sonar.projectName=test
+sonar.projectName=suresh
 sonar.projectKey=pipe
 sonar.projectVersion=1.0
 sonar.sources=.
